; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_do_lstat.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_do_lstat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.stat*, i32)* @do_lstat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_lstat(i8* %0, %struct.stat* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.stat*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store %struct.stat* %1, %struct.stat** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @git_win32_path_from_utf8(i32 %10, i8* %11)
  store i32 %12, i32* %9, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %23

15:                                               ; preds = %3
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @git_win32_path_trim_end(i32 %16, i32 %17)
  %19 = load i32, i32* %8, align 4
  %20 = load %struct.stat*, %struct.stat** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @lstat_w(i32 %19, %struct.stat* %20, i32 %21)
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %15, %14
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @git_win32_path_from_utf8(i32, i8*) #1

declare dso_local i32 @git_win32_path_trim_end(i32, i32) #1

declare dso_local i32 @lstat_w(i32, %struct.stat*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
